--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "allure:generate": "allure generate allure-results --clean",
-    "allure:open": "allure open"
+    "cypress-open": "cypress open",
+    "cypress-run": "cypress run",
+    "allure-generate": "allure generate allure-results --clean -o allure-report",
+    "allure-open": "allure open",
+    "limpiar-reporte": "rimraf ./allure-report && rimraf ./allure-results",
+    "ejecutar-pruebas": "cypress run --headed --env allure=true",
+    "generar-reporte": "allure generate allure-results -o allure-report --clean",
+    "abrir-report": "allure open",
+    "test": "npm run limpiar-reporte && npm run ejecutar-pruebas && npm run generar-reporte && npm run abrir-report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@shelex/cypress-allure-plugin": "^2.40.2"
+    "cypress": "^13.1.0",
+    "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "@mmisty/cypress-allure-adapter": "^2.6.2",
+    "allure-commandline": "^2.29.0"
   }
 }
