--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@mmisty/cypress-allure-adapter": "^2.6.2",
-    "allure-commandline": "^2.29.0"
+    "allure-commandline": "^2.29.0",
+    "cypress-parallel": "^0.14.0"
   }
 }
